# serve-empyre

./: CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Dockerfile  Empyre - Albert NLP Service.sublime-workspace  Empyre - Albert-supported DSL Interpreter.sublime-workspace  LICENSE  Makefile  README.md  Serve Empyre - Sedition Edition - ALBERT Tokenizer for Translation.sublime-workspace  build.bat  build.sh  meson.build  project.4coder
.cache/clangd/index/: ATen.h.32EA4DC64B05FED0.idx  ATenGeneral.h.B2DD3F4EB705DF62.idx  ATenOpList.h.E0B6D775AA2ACD31.idx  AlignOf.h.A41A4880D56A2958.idx  Allocator.h.4A19F9CB43FB3A5D.idx  AppController.cpp.6E36EE9DDA62E155.idx  AppController.h.38377813281F462D.idx  AppProcessor.cpp.C94BD40BA669D15A.idx  AppProcessor.h.C3BD7308D25569B4.idx  Array.h.DE5659775E3350FB.idx  ArrayRef.h.9ECB16621BA8F5D0.idx  BFloat16-inl.h.40343C3C9F50B3CE.idx  BFloat16.h.8AEE9D8FC97E132D.idx  Backend.h.B36B76A075D69561.idx  Backtrace.h.B4B5B97EC018EB58.idx  Bitset.h.9F4AFF9BF1B2C1A2.idx  C++17.h.FCA4DEBEE443C795.idx  CPUGeneratorImpl.h.DA9FEE26362503DA.idx  CUDAHooksInterface.h.1752A869FC88A08F.idx  CompileTimeFunctionPointer.h.9B101B241F8DA51B.idx  Config.h.5CD2855DA7632630.idx  ConstexprCrc.h.8D8F234710981519.idx  Context.h.2DD25422FB15BB31.idx  ControllerBase.h.BE70F36FEB2C92C0.idx  CopyBytes.h.D11DAA7DF900ABDB.idx  CppSignature.h.7CB9FAE9F07AD0AD.idx  DefaultDtype.h.FD0355A42B3CBE98.idx  Deprecated.h.8A8B0B3ECF30D2F5.idx  DeprecatedTypeProperties.h.1D5234D6EB308E0E.idx  DeprecatedTypePropertiesRegistry.h.47817495139762B7.idx  Device.h.55747E7DBCC974A7.idx  Device.h.9ABAAC36A948B010.idx  DeviceGuard.h.1EEA0516C0C81AA2.idx  DeviceGuard.h.508EA462E911AF77.idx  DeviceGuardImplInterface.h.165B2874AAD81DF7.idx  DeviceType.h.D5250CD2DD3B66E3.idx  Dict.h.E427D1B40924CE60.idx  Dict_inl.h.85C40B5EA29056B2.idx  DimVector.h.0FFD853754C51967.idx  DimVector.h.8D70BC5EABA9FFBB.idx  (+364 more)
.local/share/sh/: aws_on_ini.sh  is_aws_pathed.sh  which_aws_cmd.sh
confs/: ENESOpusMT.conf
include/: minunit.h
includes/: ndbg.h
py/: CategoricalOutputs.py  LossCriterion.py  NLPClassifierUnicoded.py  RNNClassifierModule.py  TensorIndexing.py  TrainingPrep.py  VintageClassicsDataset.py
py/trans/: ENESMarianMT.py
src/: Empyre.h
src/ctrl/: ControllerBase.cpp  ControllerBase.h  IndexController.h  ModuleRoutingComponent.cpp  ModuleRoutingComponent.h
src/ctrl/app/: EmpyreController.cpp  EmpyreController.h
src/data/sql/: DocumentUsecase.sql  HemingwayAccess.sql
src/models/albert/: .PreTrainedModel.h.swp  AlbertConfig.h  AlbertModel.h  PreTrainedConfig.cpp  PreTrainedConfig.h  PreTrainedModel.cpp  PreTrainedModel.h
src/models/command/: HandlerBase.cpp  HandlerBase.h
src/models/mtm/: SutskeverFactory.cpp  SutskeverStyle.h
src/models/nmt/: nmt_ffnn.c  nmt_ffnn.h  (+1 more)
src/proc/: AlbertConfig.cpp  AlbertConfig.h  AlbertModel.h  AlbertModelImpl.cpp  AlbertTokenizerFast.h  NLPClassificationProcessor.cpp  NLPClassificationProcessor.h  SampleTensorInject.cpp  SampleTensorInjector.h
(+8 files in other folders)
